omega+/omega_calc/obj/y.output
Nieużywane symbole terminalne w gramatyce

    ST
    LEQ
    GEQ
    NEQ
    ITERATIONS
    PARSE_EXPRESSION
    PARSE_FORMULA
    PARSE_RELATION
    TEST
    p2
    p3
    p4
    p5
    p6
    p7


Stan 79 konflikty: 1 przesunięcie/redukcja
Stan 80 konflikty: 1 przesunięcie/redukcja
Stan 81 konflikty: 1 przesunięcie/redukcja
Stan 82 konflikty: 1 przesunięcie/redukcja
Stan 83 konflikty: 1 przesunięcie/redukcja
Stan 85 konflikty: 1 przesunięcie/redukcja
Stan 86 konflikty: 1 przesunięcie/redukcja
Stan 87 konflikty: 1 przesunięcie/redukcja
Stan 88 konflikty: 1 przesunięcie/redukcja
Stan 89 konflikty: 1 przesunięcie/redukcja
Stan 90 konflikty: 1 przesunięcie/redukcja
Stan 91 konflikty: 1 przesunięcie/redukcja
Stan 92 konflikty: 1 przesunięcie/redukcja
Stan 93 konflikty: 1 przesunięcie/redukcja
Stan 94 konflikty: 1 przesunięcie/redukcja
Stan 95 konflikty: 1 przesunięcie/redukcja
Stan 96 konflikty: 1 przesunięcie/redukcja
Stan 97 konflikty: 1 przesunięcie/redukcja
Stan 98 konflikty: 1 przesunięcie/redukcja
Stan 99 konflikty: 1 przesunięcie/redukcja
Stan 100 konflikty: 1 przesunięcie/redukcja
Stan 101 konflikty: 1 przesunięcie/redukcja
Stan 102 konflikty: 1 przesunięcie/redukcja
Stan 103 konflikty: 1 przesunięcie/redukcja
Stan 104 konflikty: 1 przesunięcie/redukcja
Stan 105 konflikty: 1 przesunięcie/redukcja
Stan 106 konflikty: 1 przesunięcie/redukcja
Stan 107 konflikty: 1 przesunięcie/redukcja
Stan 108 konflikty: 1 przesunięcie/redukcja
Stan 116 konflikty: 1 przesunięcie/redukcja
Stan 117 konflikty: 1 przesunięcie/redukcja
Stan 119 konflikty: 1 przesunięcie/redukcja
Stan 120 konflikty: 1 przesunięcie/redukcja
Stan 121 konflikty: 1 przesunięcie/redukcja
Stan 122 konflikty: 1 przesunięcie/redukcja
Stan 123 konflikty: 1 przesunięcie/redukcja
Stan 124 konflikty: 1 przesunięcie/redukcja
Stan 125 konflikty: 1 przesunięcie/redukcja
Stan 126 konflikty: 1 przesunięcie/redukcja
Stan 130 konflikty: 1 przesunięcie/redukcja
Stan 131 konflikty: 1 przesunięcie/redukcja
Stan 132 konflikty: 1 przesunięcie/redukcja
Stan 133 konflikty: 1 przesunięcie/redukcja
Stan 134 konflikty: 1 przesunięcie/redukcja
Stan 135 konflikty: 1 przesunięcie/redukcja
Stan 136 konflikty: 1 przesunięcie/redukcja
Stan 137 konflikty: 1 przesunięcie/redukcja
Stan 138 konflikty: 1 przesunięcie/redukcja
Stan 139 konflikty: 1 przesunięcie/redukcja
Stan 140 konflikty: 1 przesunięcie/redukcja
Stan 152 konflikty: 35 przesunięcie/redukcja
Stan 204 konflikty: 1 przesunięcie/redukcja
Stan 205 konflikty: 1 przesunięcie/redukcja
Stan 207 konflikty: 1 przesunięcie/redukcja
Stan 208 konflikty: 1 przesunięcie/redukcja
Stan 210 konflikty: 1 przesunięcie/redukcja
Stan 211 konflikty: 1 przesunięcie/redukcja
Stan 213 konflikty: 1 przesunięcie/redukcja
Stan 214 konflikty: 1 przesunięcie/redukcja
Stan 252 konflikty: 1 przesunięcie/redukcja
Stan 253 konflikty: 1 przesunięcie/redukcja
Stan 254 konflikty: 1 przesunięcie/redukcja
Stan 276 konflikty: 1 przesunięcie/redukcja
Stan 284 konflikty: 2 redukcja/redukcja


Gramatyka

    0 $accept: inputSequence $end

    1 inputSequence: ε

    2 $@1: ε

    3 inputSequence: inputSequence $@1 inputItem

    4 inputItem: ';'
    5          | error ';'
    6          | SYMBOLIC globVarList ';'
    7          | VAR IS_ASSIGNED relation ';'
    8          | relation ';'
    9          | TIME relation ';'
   10          | TIMECLOSURE relation ';'
   11          | relation SUBSET relation ';'
   12          | ALL_IN_REGION relation
   13          | CODEGEN effort relPairList context ';'
   14          | TCODEGEN effort statementInfoResult context ';'
   15          | SPMD blockAndProcsAndEffort relTripList ';'
   16          | reachable ';'

   17 relTripList: relTripList ',' relation ':' relation ':' relation
   18            | relation ':' relation ':' relation

   19 blockAndProcsAndEffort: ε
   20                       | INT
   21                       | INT INT
   22                       | INT INT INT

   23 effort: ε
   24       | INT
   25       | '-' INT

   26 context: ε
   27        | GIVEN relation

   28 relPairList: relPairList ',' relation ':' relation
   29            | relPairList ',' relation
   30            | relation ':' relation
   31            | relation

   32 statementInfoResult: statementInfoList
   33                    | TRANS_IS relation statementInfoResult
   34                    | SET_MMAP INT partialwrites statementInfoResult
   35                    | UNROLL_IS INT INT INT statementInfoResult
   36                    | PEEL_IS INT INT relation statementInfoResult
   37                    | PEEL_IS INT INT relation ',' relation statementInfoResult

   38 statementInfoList: statementInfo
   39                  | statementInfoList ',' statementInfo

   40 statementInfo: '[' STRING ',' relation ',' partialwrites ',' reads ']'
   41              | '[' STRING ',' relation ',' partialwrites ']'

   42 partialwrites: partialwrites ',' partialwrite
   43              | partialwrite

   44 partialwrite: STRING '[' relation ']' ',' relation
   45             | STRING ',' relation

   46 reads: reads ',' oneread
   47      | oneread

   48 oneread: '[' partials ']'

   49 partials: partials ',' partial
   50         | partial

   51 partial: INT ',' relation

   52 $@2: ε

   53 relation: OPEN_BRACE $@2 builtRelation CLOSE_BRACE
   54         | VAR
   55         | '(' relation ')'
   56         | relation '+'
   57         | relation '*'
   58         | relation '+' WITHIN relation
   59         | MINIMIZE_RANGE relation
   60         | MAXIMIZE_RANGE relation
   61         | MINIMIZE_DOMAIN relation
   62         | MAXIMIZE_DOMAIN relation
   63         | MAXIMIZE relation
   64         | MINIMIZE relation
   65         | FARKAS relation
   66         | DECOUPLED_FARKAS relation
   67         | relation '@'
   68         | PROJECT_AWAY_SYMBOLS relation
   69         | PROJECT_ON_SYMBOLS relation
   70         | DIFFERENCE relation
   71         | DIFFERENCE_TO_RELATION relation
   72         | DOMAIN relation
   73         | VENN relation
   74         | VENN relation GIVEN relation
   75         | CONVEX_HULL relation
   76         | DECOUPLED_CONVEX_HULL relation
   77         | POSITIVE_COMBINATION relation
   78         | LINEAR_COMBINATION relation
   79         | AFFINE_COMBINATION relation
   80         | CONVEX_COMBINATION relation
   81         | PAIRWISE_CHECK relation
   82         | CONVEX_CHECK relation
   83         | CONVEX_REPRESENTATION relation
   84         | AFFINE_HULL relation
   85         | CONIC_HULL relation
   86         | LINEAR_HULL relation
   87         | QUICK_HULL relation
   88         | RECT_HULL relation
   89         | HULL relation
   90         | HULL relation GIVEN relation
   91         | APPROX relation
   92         | RANGE relation
   93         | INVERSE relation
   94         | COMPLEMENT relation
   95         | ITERATE_CLOSURE relation
   96         | ADVANCED_ITERATE_CLOSURE relation
   97         | SEMI_NAIVE_CLOSURE relation
   98         | TC relation
   99         | APPROX_CLOSURE relation
  100         | MIN_DEPENDENCE_DIST relation
  101         | APPROX_TO_UNIFORM relation
  102         | TRANSITIVE_REDUCTION relation
  103         | RK relation
  104         | relation '^' '+'
  105         | GIST relation GIVEN relation
  106         | relation '(' relation ')'
  107         | relation COMPOSE relation
  108         | relation CARRIED_BY INT
  109         | relation JOIN relation
  110         | relation RESTRICT_RANGE relation
  111         | relation RESTRICT_DOMAIN relation
  112         | relation INTERSECTION relation
  113         | relation '-' relation
  114         | relation UNION relation
  115         | relation '*' relation
  116         | SUPERSETOF relation
  117         | SUBSETOF relation
  118         | MAKE_UPPER_BOUND relation
  119         | MAKE_LOWER_BOUND relation
  120         | SAMPLE relation
  121         | SYM_SAMPLE relation
  122         | reachable_of
  123         | ASSERT_UNSAT relation

  124 $@3: ε

  125 $@4: ε

  126 builtRelation: tupleDeclaration GOES_TO $@3 tupleDeclaration $@4 optionalFormula
  127              | tupleDeclaration optionalFormula
  128              | formula

  129 optionalFormula: formula_sep formula
  130                | ε

  131 formula_sep: ':'
  132            | VERTICAL_BAR
  133            | SUCH_THAT

  134 $@5: ε

  135 tupleDeclaration: $@5 '[' optionalTupleVarList ']'

  136 optionalTupleVarList: ε
  137                     | tupleVar
  138                     | optionalTupleVarList ',' tupleVar

  139 tupleVar: VAR
  140         | '*'
  141         | exp
  142         | exp ':' exp
  143         | exp ':' exp ':' COEF

  144 varList: varList ',' VAR
  145        | VAR

  146 varDecl: varList

  147 varDeclOptBrackets: varDecl
  148                   | '[' varDecl ']'

  149 globVarList: globVarList ',' globVar
  150            | globVar

  151 globVar: VAR '(' INT ')'
  152        | VAR

  153 formula: formula AND formula
  154        | formula OR formula
  155        | constraintChain
  156        | '(' formula ')'
  157        | NOT formula
  158        | start_exists varDeclOptBrackets exists_sep formula end_quant
  159        | start_forall varDeclOptBrackets forall_sep formula end_quant

  160 start_exists: '(' EXISTS
  161             | EXISTS '('

  162 exists_sep: ':'
  163           | VERTICAL_BAR
  164           | SUCH_THAT

  165 start_forall: '(' FORALL
  166             | FORALL '('

  167 forall_sep: ':'

  168 end_quant: ')'

  169 expList: exp ',' expList
  170        | exp

  171 constraintChain: expList REL_OP expList
  172                | expList REL_OP constraintChain

  173 simpleExp: VAR

  174 $@6: ε

  175 simpleExp: VAR '(' $@6 argumentList ')'
  176          | '(' exp ')'

  177 argumentList: argumentList ',' VAR
  178             | VAR

  179 exp: COEF
  180    | COEF simpleExp
  181    | simpleExp
  182    | '-' exp
  183    | exp '+' exp
  184    | exp '-' exp
  185    | exp '*' exp

  186 reachable: REACHABLE_FROM nodeNameList nodeSpecificationList

  187 reachable_of: REACHABLE_OF VAR IN nodeNameList nodeSpecificationList

  188 nodeNameList: '(' realNodeNameList ')'

  189 realNodeNameList: realNodeNameList ',' VAR
  190                 | VAR

  191 nodeSpecificationList: OPEN_BRACE realNodeSpecificationList CLOSE_BRACE

  192 realNodeSpecificationList: realNodeSpecificationList ',' VAR ':' relation
  193                          | realNodeSpecificationList ',' VAR GOES_TO VAR ':' relation
  194                          | VAR GOES_TO VAR ':' relation
  195                          | VAR ':' relation


Symbole terminalne i reguły, w których występują

    $end (0) 0
    '(' (40) 55 106 151 156 160 161 165 166 175 176 188
    ')' (41) 55 106 151 156 168 175 176 188
    '*' (42) 57 115 140 185
    '+' (43) 56 58 104 183
    ',' (44) 17 28 29 37 39 40 41 42 44 45 46 49 51 138 144 149 169 177 189 192 193
    '-' (45) 25 113 182 184
    ':' (58) 17 18 28 30 131 142 143 162 167 192 193 194 195
    ';' (59) 4 5 6 7 8 9 10 11 13 14 15 16
    '@' (64) 67
    '[' (91) 40 41 44 48 135 148
    ']' (93) 40 41 44 48 135 148
    '^' (94) 104
    error (256) 5
    VAR <VAR_NAME> (258) 7 54 139 144 145 151 152 173 175 177 178 187 189 190 192 193 194 195
    INT <INT_VALUE> (259) 20 21 22 24 25 34 35 36 37 51 108 151
    COEF <COEF_VALUE> (260) 143 179 180
    STRING <STRING_VALUE> (261) 40 41 44 45
    OPEN_BRACE (262) 53 191
    CLOSE_BRACE (263) 53 191
    SYMBOLIC (264) 6
    OR (265) 154
    AND (266) 153
    NOT (267) 157
    ST (268)
    APPROX (269) 91
    IS_ASSIGNED (270) 7
    FORALL (271) 165 166
    EXISTS (272) 160 161
    DOMAIN (273) 72
    RANGE (274) 92
    DIFFERENCE (275) 70
    DIFFERENCE_TO_RELATION (276) 71
    GIST (277) 105
    GIVEN (278) 27 74 90 105
    HULL (279) 89 90
    WITHIN (280) 58
    MAXIMIZE (281) 63
    MINIMIZE (282) 64
    AFFINE_HULL (283) 84
    VENN (284) 73 74
    CONVEX_COMBINATION (285) 80
    POSITIVE_COMBINATION (286) 77
    LINEAR_COMBINATION (287) 78
    AFFINE_COMBINATION (288) 79
    CONVEX_HULL (289) 75
    CONIC_HULL (290) 85
    LINEAR_HULL (291) 86
    QUICK_HULL (292) 87
    PAIRWISE_CHECK (293) 81
    CONVEX_CHECK (294) 82
    CONVEX_REPRESENTATION (295) 83
    RECT_HULL (296) 88
    DECOUPLED_CONVEX_HULL (297) 76
    MAXIMIZE_RANGE (298) 60
    MINIMIZE_RANGE (299) 59
    MAXIMIZE_DOMAIN (300) 62
    MINIMIZE_DOMAIN (301) 61
    LEQ (302)
    GEQ (303)
    NEQ (304)
    GOES_TO (305) 126 193 194
    COMPOSE (306) 107
    JOIN (307) 109
    INVERSE (308) 93
    COMPLEMENT (309) 94
    IN (310) 187
    CARRIED_BY (311) 108
    TIME (312) 9
    TIMECLOSURE (313) 10
    UNION (314) 114
    INTERSECTION (315) 112
    VERTICAL_BAR (316) 132 163
    SUCH_THAT (317) 133 164
    SUBSET (318) 11
    ITERATIONS (319)
    SPMD (320) 15
    CODEGEN (321) 13
    DECOUPLED_FARKAS (322) 66
    FARKAS (323) 65
    TCODEGEN (324) 14
    TRANS_IS (325) 33
    SET_MMAP (326) 34
    UNROLL_IS (327) 35
    PEEL_IS (328) 36 37
    MAKE_UPPER_BOUND (329) 118
    MAKE_LOWER_BOUND (330) 119
    REL_OP <REL_OPERATOR> (331) 171 172
    RESTRICT_DOMAIN (332) 111
    RESTRICT_RANGE (333) 110
    SUPERSETOF (334) 116
    SUBSETOF (335) 117
    SAMPLE (336) 120
    SYM_SAMPLE (337) 121
    PROJECT_AWAY_SYMBOLS (338) 68
    PROJECT_ON_SYMBOLS (339) 69
    REACHABLE_FROM (340) 186
    REACHABLE_OF (341) 187
    ASSERT_UNSAT (342) 123
    PARSE_EXPRESSION (343)
    PARSE_FORMULA (344)
    PARSE_RELATION (345)
    ITERATE_CLOSURE (346) 95
    APPROX_CLOSURE (347) 99
    TRANSITIVE_REDUCTION (348) 102
    APPROX_TO_UNIFORM (349) 101
    RK (350) 103
    TC (351) 98
    SEMI_NAIVE_CLOSURE (352) 97
    ADVANCED_ITERATE_CLOSURE (353) 96
    ALL_IN_REGION (354) 12
    MIN_DEPENDENCE_DIST (355) 100
    TEST (356)
    p1 (357)
    p2 (358)
    p3 (359)
    p4 (360)
    p5 (361)
    p6 (362)
    p7 (363)
    p8 (364)
    p9 (365)
    p10 (366)


Symbole nieterminalne i reguły, w których występują

    $accept (124)
        on left: 0
    inputSequence (125)
        on left: 1 3
        on right: 0 3
    $@1 (126)
        on left: 2
        on right: 3
    inputItem (127)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 3
    relTripList <REL_TUPLE_TRIPLE> (128)
        on left: 17 18
        on right: 15 17
    blockAndProcsAndEffort (129)
        on left: 19 20 21 22
        on right: 15
    effort <INT_VALUE> (130)
        on left: 23 24 25
        on right: 13 14
    context <RELATION> (131)
        on left: 26 27
        on right: 13 14
    relPairList <REL_TUPLE_PAIR> (132)
        on left: 28 29 30 31
        on right: 13 28 29
    statementInfoResult <STM_INFO_TUPLE> (133)
        on left: 32 33 34 35 36 37
        on right: 14 33 34 35 36 37
    statementInfoList <STM_INFO_TUPLE> (134)
        on left: 38 39
        on right: 32 39
    statementInfo <STM_INFO> (135)
        on left: 40 41
        on right: 38 39
    partialwrites <MMAP> (136)
        on left: 42 43
        on right: 34 40 41 42
    partialwrite <PMMAP> (137)
        on left: 44 45
        on right: 42 43
    reads <STM_INFO> (138)
        on left: 46 47
        on right: 40 46
    oneread <READ> (139)
        on left: 48
        on right: 46 47
    partials <READ> (140)
        on left: 49 50
        on right: 48 49
    partial <PREAD> (141)
        on left: 51
        on right: 49 50
    relation <RELATION> (142)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123
        on right: 7 8 9 10 11 12 17 18 27 28 29 30 31 33 36 37 40 41 44 45 51 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 123 192 193 194 195
    $@2 (143)
        on left: 52
        on right: 53
    builtRelation <RELATION> (144)
        on left: 126 127 128
        on right: 53
    $@3 (145)
        on left: 124
        on right: 126
    $@4 (146)
        on left: 125
        on right: 126
    optionalFormula <ASTP> (147)
        on left: 129 130
        on right: 126 127
    formula_sep (148)
        on left: 131 132 133
        on right: 129
    tupleDeclaration <TUPLE_DESCRIPTOR> (149)
        on left: 135
        on right: 126 127
    $@5 (150)
        on left: 134
        on right: 135
    optionalTupleVarList (151)
        on left: 136 137 138
        on right: 135 138
    tupleVar (152)
        on left: 139 140 141 142 143
        on right: 137 138
    varList <VAR_LIST> (153)
        on left: 144 145
        on right: 144 146
    varDecl <DECLARATION_SITE> (154)
        on left: 146
        on right: 147 148
    varDeclOptBrackets <DECLARATION_SITE> (155)
        on left: 147 148
        on right: 158 159
    globVarList (156)
        on left: 149 150
        on right: 6 149
    globVar (157)
        on left: 151 152
        on right: 149 150
    formula <ASTP> (158)
        on left: 153 154 155 156 157 158 159
        on right: 128 129 153 154 156 157 158 159
    start_exists (159)
        on left: 160 161
        on right: 158
    exists_sep (160)
        on left: 162 163 164
        on right: 158
    start_forall (161)
        on left: 165 166
        on right: 159
    forall_sep (162)
        on left: 167
        on right: 159
    end_quant (163)
        on left: 168
        on right: 158 159
    expList <EXP_LIST> (164)
        on left: 169 170
        on right: 169 171 172
    constraintChain <ASTCP> (165)
        on left: 171 172
        on right: 155 172
    simpleExp <EXP> (166)
        on left: 173 175 176
        on right: 180 181
    $@6 (167)
        on left: 174
        on right: 175
    argumentList <ARGUMENT_TUPLE> (168)
        on left: 177 178
        on right: 175 177
    exp <EXP> (169)
        on left: 179 180 181 182 183 184 185
        on right: 141 142 143 169 170 176 182 183 184 185
    reachable <RELATION_ARRAY_1D> (170)
        on left: 186
        on right: 16
    reachable_of <RELATION> (171)
        on left: 187
        on right: 122
    nodeNameList (172)
        on left: 188
        on right: 186 187
    realNodeNameList (173)
        on left: 189 190
        on right: 188 189
    nodeSpecificationList (174)
        on left: 191
        on right: 186 187
    realNodeSpecificationList (175)
        on left: 192 193 194 195
        on right: 191 192 193


Stan 0

    0 $accept: • inputSequence $end

    $domyślnie  redukcja przy użyciu reguły 1 (inputSequence)

    inputSequence  przejście do stanu 1


Stan 1

    0 $accept: inputSequence • $end
    3 inputSequence: inputSequence • $@1 inputItem

    $end  przesunięcie, i przejście do stanu 2

    $domyślnie  redukcja przy użyciu reguły 2 ($@1)

    $@1  przejście do stanu 3


Stan 2

    0 $accept: inputSequence $end •

    $domyślnie  akceptowanie


Stan 3

    3 inputSequence: inputSequence $@1 • inputItem

    error                     przesunięcie, i przejście do stanu 4
    VAR                       przesunięcie, i przejście do stanu 5
    OPEN_BRACE                przesunięcie, i przejście do stanu 6
    SYMBOLIC                  przesunięcie, i przejście do stanu 7
    APPROX                    przesunięcie, i przejście do stanu 8
    DOMAIN                    przesunięcie, i przejście do stanu 9
    RANGE                     przesunięcie, i przejście do stanu 10
    DIFFERENCE                przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION    przesunięcie, i przejście do stanu 12
    GIST                      przesunięcie, i przejście do stanu 13
    HULL                      przesunięcie, i przejście do stanu 14
    MAXIMIZE                  przesunięcie, i przejście do stanu 15
    MINIMIZE                  przesunięcie, i przejście do stanu 16
    AFFINE_HULL               przesunięcie, i przejście do stanu 17
    VENN                      przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION        przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION      przesunięcie, i przejście do stanu 20
    LINEAR_COMBINATION        przesunięcie, i przejście do stanu 21
    AFFINE_COMBINATION        przesunięcie, i przejście do stanu 22
    CONVEX_HULL               przesunięcie, i przejście do stanu 23
    CONIC_HULL                przesunięcie, i przejście do stanu 24
    LINEAR_HULL               przesunięcie, i przejście do stanu 25
    QUICK_HULL                przesunięcie, i przejście do stanu 26
    PAIRWISE_CHECK            przesunięcie, i przejście do stanu 27
    CONVEX_CHECK              przesunięcie, i przejście do stanu 28
    CONVEX_REPRESENTATION     przesunięcie, i przejście do stanu 29
    RECT_HULL                 przesunięcie, i przejście do stanu 30
    DECOUPLED_CONVEX_HULL     przesunięcie, i przejście do stanu 31
    MAXIMIZE_RANGE            przesunięcie, i przejście do stanu 32
    MINIMIZE_RANGE            przesunięcie, i przejście do stanu 33
    MAXIMIZE_DOMAIN           przesunięcie, i przejście do stanu 34
    MINIMIZE_DOMAIN           przesunięcie, i przejście do stanu 35
    INVERSE                   przesunięcie, i przejście do stanu 36
    COMPLEMENT                przesunięcie, i przejście do stanu 37
    TIME                      przesunięcie, i przejście do stanu 38
    TIMECLOSURE               przesunięcie, i przejście do stanu 39
    SPMD                      przesunięcie, i przejście do stanu 40
    CODEGEN                   przesunięcie, i przejście do stanu 41
    DECOUPLED_FARKAS          przesunięcie, i przejście do stanu 42
    FARKAS                    przesunięcie, i przejście do stanu 43
    TCODEGEN                  przesunięcie, i przejście do stanu 44
    MAKE_UPPER_BOUND          przesunięcie, i przejście do stanu 45
    MAKE_LOWER_BOUND          przesunięcie, i przejście do stanu 46
    SUPERSETOF                przesunięcie, i przejście do stanu 47
    SUBSETOF                  przesunięcie, i przejście do stanu 48
    SAMPLE                    przesunięcie, i przejście do stanu 49
    SYM_SAMPLE                przesunięcie, i przejście do stanu 50
    PROJECT_AWAY_SYMBOLS      przesunięcie, i przejście do stanu 51
    PROJECT_ON_SYMBOLS        przesunięcie, i przejście do stanu 52
    REACHABLE_FROM            przesunięcie, i przejście do stanu 53
    REACHABLE_OF              przesunięcie, i przejście do stanu 54
    ASSERT_UNSAT              przesunięcie, i przejście do stanu 55
    ITERATE_CLOSURE           przesunięcie, i przejście do stanu 56
    APPROX_CLOSURE            przesunięcie, i przejście do stanu 57
    TRANSITIVE_REDUCTION      przesunięcie, i przejście do stanu 58
    APPROX_TO_UNIFORM         przesunięcie, i przejście do stanu 59
    RK                        przesunięcie, i przejście do stanu 60
    TC                        przesunięcie, i przejście do stanu 61
    SEMI_NAIVE_CLOSURE        przesunięcie, i przejście do stanu 62
    ADVANCED_ITERATE_CLOSURE  przesunięcie, i przejście do stanu 63
    ALL_IN_REGION             przesunięcie, i przejście do stanu 64
    MIN_DEPENDENCE_DIST       przesunięcie, i przejście do stanu 65
    '('                       przesunięcie, i przejście do stanu 66
    ';'                       przesunięcie, i przejście do stanu 67

    inputItem     przejście do stanu 68
    relation      przejście do stanu 69
    reachable     przejście do stanu 70
    reachable_of  przejście do stanu 71


Stan 4

    5 inputItem: error • ';'

    ';'  przesunięcie, i przejście do stanu 72


Stan 5

    7 inputItem: VAR • IS_ASSIGNED relation ';'
   54 relation: VAR •

    IS_ASSIGNED  przesunięcie, i przejście do stanu 73

    $domyślnie  redukcja przy użyciu reguły 54 (relation)


Stan 6

   53 relation: OPEN_BRACE • $@2 builtRelation CLOSE_BRACE

    $domyślnie  redukcja przy użyciu reguły 52 ($@2)

    $@2  przejście do stanu 74


Stan 7

    6 inputItem: SYMBOLIC • globVarList ';'

    VAR  przesunięcie, i przejście do stanu 75

    globVarList  przejście do stanu 76
    globVar      przejście do stanu 77


Stan 8

   91 relation: APPROX • relation

    VAR                       przesunięcie, i przejście do stanu 78
    OPEN_BRACE                przesunięcie, i przejście do stanu 6
    APPROX                    przesunięcie, i przejście do stanu 8
    DOMAIN                    przesunięcie, i przejście do stanu 9
    RANGE                     przesunięcie, i przejście do stanu 10
    DIFFERENCE                przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION    przesunięcie, i przejście do stanu 12
    GIST                      przesunięcie, i przejście do stanu 13
    HULL                      przesunięcie, i przejście do stanu 14
    MAXIMIZE                  przesunięcie, i przejście do stanu 15
    MINIMIZE                  przesunięcie, i przejście do stanu 16
    AFFINE_HULL               przesunięcie, i przejście do stanu 17
    VENN                      przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION        przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION      przesunięcie, i przejście do stanu 20
    LINEAR_COMBINATION        przesunięcie, i przejście do stanu 21
    AFFINE_COMBINATION        przesunięcie, i przejście do stanu 22
    CONVEX_HULL               przesunięcie, i przejście do stanu 23
    CONIC_HULL                przesunięcie, i przejście do stanu 24
    LINEAR_HULL               przesunięcie, i przejście do stanu 25
    QUICK_HULL                przesunięcie, i przejście do stanu 26
    PAIRWISE_CHECK            przesunięcie, i przejście do stanu 27
    CONVEX_CHECK              przesunięcie, i przejście do stanu 28
    CONVEX_REPRESENTATION     przesunięcie, i przejście do stanu 29
    RECT_HULL                 przesunięcie, i przejście do stanu 30
    DECOUPLED_CONVEX_HULL     przesunięcie, i przejście do stanu 31
    MAXIMIZE_RANGE            przesunięcie, i przejście do stanu 32
    MINIMIZE_RANGE            przesunięcie, i przejście do stanu 33
    MAXIMIZE_DOMAIN           przesunięcie, i przejście do stanu 34
    MINIMIZE_DOMAIN           przesunięcie, i przejście do stanu 35
    INVERSE                   przesunięcie, i przejście do stanu 36
    COMPLEMENT                przesunięcie, i przejście do stanu 37
    DECOUPLED_FARKAS          przesunięcie, i przejście do stanu 42
    FARKAS                    przesunięcie, i przejście do stanu 43
    MAKE_UPPER_BOUND          przesunięcie, i przejście do stanu 45
    MAKE_LOWER_BOUND          przesunięcie, i przejście do stanu 46
    SUPERSETOF                przesunięcie, i przejście do stanu 47
    SUBSETOF                  przesunięcie, i przejście do stanu 48
    SAMPLE                    przesunięcie, i przejście do stanu 49
    SYM_SAMPLE                przesunięcie, i przejście do stanu 50
    PROJECT_AWAY_SYMBOLS      przesunięcie, i przejście do stanu 51
    PROJECT_ON_SYMBOLS        przesunięcie, i przejście do stanu 52
    REACHABLE_OF              przesunięcie, i przejście do stanu 54
    ASSERT_UNSAT              przesunięcie, i przejście do stanu 55
    ITERATE_CLOSURE           przesunięcie, i przejście do stanu 56
    APPROX_CLOSURE            przesunięcie, i przejście do stanu 57
    TRANSITIVE_REDUCTION      przesunięcie, i przejście do stanu 58
    APPROX_TO_UNIFORM         przesunięcie, i przejście do stanu 59
    RK                        przesunięcie, i przejście do stanu 60
    TC                        przesunięcie, i przejście do stanu 61
    SEMI_NAIVE_CLOSURE        przesunięcie, i przejście do stanu 62
    ADVANCED_ITERATE_CLOSURE  przesunięcie, i przejście do stanu 63
    MIN_DEPENDENCE_DIST       przesunięcie, i przejście do stanu 65
    '('                       przesunięcie, i przejście do stanu 66

    relation      przejście do stanu 79
    reachable_of  przejście do stanu 71


Stan 9

   72 relation: DOMAIN • relation
